--- a/wp-content/themes/wicket/assets/css/theme.css
+++ b/wp-content/themes/wicket/assets/css/theme.css
@@ -14,7 +14,7 @@
     z-index: 10000;
     display: flex;
     align-items: center;
-    min-height:120px;
+    min-height: 100px;
     background: transparent;
 }
 .wicket-menu-wrap {
@@ -1265,3 +1265,45 @@ nav.navigation.posts-navigation {
 	}
 }
 /*head line tricky end*/
+.nav-top-ticker,
+.ticker-wrapper-h{
+	display:none;
+}
+
+.header-bg-box {
+    background: #0E4B3A;
+    border-bottom: 0.8px solid rgba(229, 255, 0, 0.2);
+}
+.head-right-button ul{
+	margin: 8px 0 0 0;
+    padding: 0;
+    display: flex;
+    width: 100%;
+    justify-content: right;
+    gap: 0 15px;
+}
+.head-right-button ul li{
+	list-style-type:none;
+}
+.head-right-button ul li a{
+	list-style-type:none;
+	padding: 13px 28px;
+	text-decoration:none;
+	font-size:16px;
+}
+.head-right-button ul li.login-btn a{
+	background-color:#0e4b3a;
+	border:1px solid #E5FF00;
+	border-radius:10px;
+	padding: 13px 28px;
+	color:#E5FF00;
+}
+.head-right-button ul li.login-btn a{
+
+}
+.head-right-button ul li.nibondon-btn a{
+	background-color:#9AE600;
+	border-radius:10px;
+	padding: 13px 32px;
+	color:#000000;
+}
