--- a/wp-content/themes/wicket/assets/css/theme.css
+++ b/wp-content/themes/wicket/assets/css/theme.css
@@ -44,16 +44,16 @@
 }
 .wicket-main-menu li a {
     display: block;
-    padding:20px 38px;
-	color:#000;
-	text-decoration:none;
-    font-size:19px;
-    font-weight:600;
+    padding: 20px 26px;
+    color: #ffffff;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 600;
 }
 
 
 .wicket-main-menu li a:hover {
- color:#333;
+    color: #fec611;
 }
 .wicket-main-menu li > .sub-menu {
     display: none;
@@ -392,12 +392,16 @@ span.mb-toggle.js-hide-mb-nav i {
 }
 .wicket-footer{
 	min-height:400px;
-	background-color:#FEBE1E;
+	background-color: #030712;
 	padding:111px 0px 0px 0px;
+}
+.wicket-footer .widget-title {
+    color:#99A1AF;
+	font-size:14px;
 }
 .wicket-footer a,
 .wicket-footer p{
-	color:#000;
+	color: #99A1AF;
 }
 .wicket-footer ul{
 	margin:0;
@@ -405,41 +409,17 @@ span.mb-toggle.js-hide-mb-nav i {
 }
 .wicket-footer ul li{
 	list-style-type:none;
-	margin-bottom:15px;
+    margin-bottom: 5px;
 }
 .wicket-footer ul li a{
    text-decoration:none !important;
-	font-size:20px;
+	font-size:14px;
 }
 .wicket-footer ul li a:hover{
-    color:#333;
+   color: #fec611;
 }
-.footer-colume-4 .new-account-widgets{
-	background-image: url(/wp-content/uploads/2024/04/new-account-bg-up.png) !important;
-	background-color:#000;
-	padding: 40px 35px;
-	border-radius:20px;
-	text-align:center;
-	margin-top: -190px;
-}
-.footer-colume-4 .new-account-widgets p{
-	font-size:16px;
-	line-height:27px;
-	color: rgba(255, 255, 255, 0.9);
-}
-.footer-colume-4 .new-account-widgets a{
-	background-color:#ffffff;
-	color:#000;
-	min-width:220px;
-	border-radius:40px;
-	font-size:17px;
-	padding: 13px 25px;
-	text-decoration:none !important;
-}
-.footer-colume-4 .new-account-widgets a:hover{
-   color:#000;
-   background-color:#FEBE1E;
-}
+
+
 .new-account-widgets .title-content{
 	margin:0;
 	padding:0;
@@ -448,16 +428,10 @@ span.mb-toggle.js-hide-mb-nav i {
 	font-weight:600;
 	color:#fff;
 }
-.footer-copyright-widgets1 .textwidget{
-	justify-content: center;
-    margin-top: 90px;
-    display: flex;
-    gap: 25px;
-    margin-bottom:95px;
-	flex-wrap: wrap;
-}
-.footer-copyright-widgets1 .textwidget p:first-child{
-	font-size:20px;
+
+.footer-copyright-widgets1 .textwidget p:first-child {
+    font-size: 14px;
+	color: #6A7282;
 }
 .footer-copyright-widgets1 a{
 	background-color:transparent;
@@ -484,7 +458,11 @@ span.mb-toggle.js-hide-mb-nav i {
 	display: inline-block;
 }
 .footer-colume-3 {
-    padding-left: 36px;
+	padding-left: 36px;
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 25%;
+    flex: 0 0 25%;
+    max-width: 25%;
 }
 .foo-bottom-border{
 	border-top:1px solid rgba(0, 0, 0, 0.2);
@@ -988,19 +966,18 @@ section.error-404.not-found h1 {
 	display: flex;
 }
 .search-box input{
-	outline:0px !important;
-	font-size:14px;
-	height: 34px;
-	padding: 0px 0 !important;
-	margin-right: -2px;
-    border-bottom: 1px solid #000 !important;
+    outline: 0px !important;
+    font-size: 14px;
+    height: 34px;
+    padding: 0px 0 !important;
+    margin-right: -2px;
+    border-bottom: 0px solid #000 !important;
     border-radius: 0px !important;
-   border-top: 0px solid #000 !important;
-   border-left: 0px solid #000 !important;
-   border-right:0px solid #000 !important;
+    border-top: 0px solid #000 !important;
+    border-left: 0px solid #000 !important;
+    border-right: 0px solid #000 !important;
     background: transparent;
     font-weight: bold;
-    color: #000;
 }
 .search-box input:focus{
    border-top: 0px solid #000 !important;
@@ -1271,39 +1248,101 @@ nav.navigation.posts-navigation {
 }
 
 .header-bg-box {
-    background: #0E4B3A;
-    border-bottom: 0.8px solid rgba(229, 255, 0, 0.2);
+  background: linear-gradient(90deg, #101828 0%, #1E2939 50%, #101828 100%);
+  box-shadow: 0px 20px 25px -5px rgba(0, 0, 0, 0.1), 0px 8px 10px -6px rgba(0, 0, 0, 0.1);
 }
-.head-right-button ul{
-	margin: 8px 0 0 0;
-    padding: 0;
+.search-box-wrap{
+	background-color:#364153;
+	border:1px solid #4A5565;
+	border-radius:10px;
+	display: flex;
+}
+.search-box-wrap label{
+	 margin-bottom:0;
+}
+.menu-social-media-container ul {
+           display: flex;
+           gap: 0 20px;
+		   margin: 20px 0 0 0;
+		   padding:0;
+        }
+.menu-social-media-container ul li a {
+                background-color:#1E2939;
+				width:36px;
+				height:36px;
+				display: flex;
+				border-radius: 10px;
+				align-items: center;
+				justify-content: center;
+         }
+.footer-colume-1 {
+        -webkit-box-flex: 0;
+    -ms-flex: 0 0 35%;
+    flex: 0 0 35%;
+    max-width: 35%;
+}
+.footer-colume-4 {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 20%;
+    flex: 0 0 20%;
+    max-width: 20%;
+}
+ul#menu-bottom-menu {
     display: flex;
-    width: 100%;
+    gap: 0 24px;
     justify-content: right;
-    gap: 0 15px;
 }
-.head-right-button ul li{
-	list-style-type:none;
+.border-bottom-copy{
+	border-top:1px solid #1E2939;
+	padding-top: 30px;
 }
-.head-right-button ul li a{
-	list-style-type:none;
-	padding: 13px 28px;
-	text-decoration:none;
-	font-size:16px;
-}
-.head-right-button ul li.login-btn a{
-	background-color:#0e4b3a;
-	border:1px solid #E5FF00;
-	border-radius:10px;
-	padding: 13px 28px;
-	color:#E5FF00;
-}
-.head-right-button ul li.login-btn a{
 
+.gradient-btn1 a{
+	background: linear-gradient(180deg, #25D366 0%, #128C7E 100%);
+    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1), 0px 4px 6px -4px rgba(0, 0, 0, 0.1);
 }
-.head-right-button ul li.nibondon-btn a{
-	background-color:#9AE600;
-	border-radius:10px;
-	padding: 13px 32px;
-	color:#000000;
+.gradient-btn2 a{
+	background: linear-gradient(180deg, #0057FF 0%, #0046CC 100%);
+   box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1), 0px 4px 6px -4px rgba(0, 0, 0, 0.1);
+}
+.gradient-btn3 a{
+	background: linear-gradient(135deg, #AD46FF 0%, #8200DB 100%);
+}
+.gradient-btn4 a{
+	background: linear-gradient(135deg, #00C950 0%, #008236 100%);
+}
+.gradient-btn5 a{
+	background: linear-gradient(135deg, #2B7FFF 0%, #1447E6 100%);
+}
+.gradient-btn6 a{
+	background: linear-gradient(135deg, #FF6900 0%, #CA3500 100%);
+}
+.match-btn a {
+    width: 100% !important;
+}
+.view-button {
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.view-button:hover {
+    transform: translateY(-5px);
+}
+.view-button a {
+    text-decoration: none !important;
+}
+
+.velki-official-section{
+	background: linear-gradient(180deg, #FFB800 0%, #FFA000 50%, #FFB800 100%);
+}
+.official-netwok-section{
+	background: linear-gradient(135deg, #FFFFFF 0%, #EFF6FF 50%, #FAF5FF 100%);
+}
+.network-support-box{
+	background: #FFFFFF;
+	border: 0.8px solid #E5E7EB;
+	box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1), 0px 4px 6px -4px rgba(0, 0, 0, 0.1);
+}
+.network-support-box .elementor-image-box-title{
+	margin-top:0;
+	margin-bottom: 2px;
 }
