--- a/wp-content/themes/wicket/style.css
+++ b/wp-content/themes/wicket/style.css
@@ -1,7 +1,7 @@
 /*!
 Theme Name: Wicket
 Theme URI: http://underscores.me/
-Author: Md. Wicket
+Author: Wicket
 Author URI: #
 Description: A modern WordPress starter theme
 Version: 1.0.0
