--- a/wp-content/themes/wicket/assets/css/theme.css
+++ b/wp-content/themes/wicket/assets/css/theme.css
@@ -1518,3 +1518,100 @@ table, th, td {
 .agent-contact-section a{
 	text-decoration:none !important;
 }
+
+.velki-agent-card {
+    align-items: center;
+}
+.velki-agent-card .agent-photo-wrapper img {
+    border-radius: 16px;
+}
+.contact-item {
+    border-radius: 8px;
+    padding: 5px 12px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.offer-slider-wrapper {
+    padding: 0px 0px !important;
+}
+.single-post .wicket-site-content {
+    margin: 0 auto;
+}
+.blog-details-article {
+    background-color: #030712;
+    color: #ffffff;
+    padding: 0;
+    margin: 0;
+    max-width: 100%;
+    min-height: 100vh;
+}
+
+.offer-slider-prize-section {
+    background: #f0f9ff;
+    border-left: 0px solid #3b82f6;
+    padding: 15px;
+    margin-bottom: 20px;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: linear-gradient(90deg, #F0FDF4 0%, #ECFDF5 100%);
+    border: 0.8px solid #B9F8CF !important;
+    border-radius: 14px;
+}
+.offer-slider-prize-section .offer-slider-prize-amount {
+    font-size: 24px;
+    font-weight: bold;
+    color: #00A63E;
+}
+.offer-slider-card {
+    overflow: hidden;
+    background: #FFFFFF;
+    box-shadow: 0px 20px 25px -5px rgba(0, 0, 0, 0.1), 0px 8px 10px -6px rgba(0, 0, 0, 0.1);
+    border-radius: 24px !important;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    box-sizing: border-box;
+}
+.offer-slider-wrapper .offer-slider-header-img {
+    height: 256px;
+}
+.offer-slider-icon-wrapper {
+    width: 70px;
+    height: 70px;
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 15px;
+    margin-top: -116px !important;
+    position: relative;
+}
+
+.offer-slider-badge {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+	 background: linear-gradient(90deg, #AD46FF 0%, #F6339A 100%);
+	opacity: 0.65;
+	box-shadow: 0px 20px 25px -5px rgba(0, 0, 0, 0.1), 0px 8px 10px -6px rgba(0, 0, 0, 0.1);
+    color: #fff;
+    padding: 8px 20px;
+    border-radius: 20px;
+    font-size: 14px;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+.offer-slider-icon-wrapper {
+    border-radius: 15px;
+    border: 4px solid #ffffff;
+}
+.offer-slider-icon-wrapper a{
+	text-decoration:none !important;
+}
