--- a/wp-content/themes/wicket/assets/css/theme.css
+++ b/wp-content/themes/wicket/assets/css/theme.css
@@ -45,7 +45,7 @@
 .wicket-main-menu li a {
     display: block;
     padding: 20px 26px;
-    color: #ffffff;
+    color: #D1D5DC;
     text-decoration: none;
     font-size: 16px;
     font-weight: 600;
